--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "@marp-team/marp-cli": "^4.1.2"
+  },
+  "marp": {
+    "inputDir": "./src/",
+    "output": "./public/"
   }
 }
 
