--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,7 +23,7 @@ jobs:
         run: npm install -g @marp-team/marp-cli
 
       - name: Build
-        run: marp
+        run: npm run build:html
 
       - uses: actions/upload-pages-artifact@v3
         with:
